Use other test inputs but vary fewer GC options.